tests/integration/snapshots/integration__schedule_tests__schedule_error_chunk_exceeds_cycle.snap
---
source: tests/integration/schedule_tests.rs
expression: output.stderr
---
Error: invalid chunk duration "P7D"

Caused by:
    chunk days (7) exceeds cycle days (6)
