tests/integration/snapshots/integration__schedule_tests__schedule_error_invalid_chunk.snap
---
source: tests/integration/schedule_tests.rs
expression: output.stderr
---
Error: --chunk must one day or longer (e.g. period 1 day = "P1D" or "1d") and in range, got 'NOT-a-duration'

Caused by:
   0: invalid duration 'NOT-a-duration'
   1: failed to parse input in the "friendly" duration format: expected duration to start with a unit value (a decimal integer) after an optional sign, but no integer was found
