tests/integration/snapshots/integration__schedule_tests__schedule_error_large_cycle.snap
---
source: tests/integration/schedule_tests.rs
expression: output.stderr
---
Error: --cycle must one day or longer (e.g. period 1 day = "P1D" or "1d") and in range, got 'P65536D'

Caused by:
   0: duration too large (u16::MAX = 65535 days): 65536 days
   1: out of range integral type conversion attempted
