tests/integration/snapshots/integration__schedule_tests__schedule_error_negative_cycle.snap
---
source: tests/integration/schedule_tests.rs
expression: output.stderr
---
Error: --cycle must one day or longer (e.g. period 1 day = "P1D" or "1d") and in range, got '-P1D'

Caused by:
   0: negative duration: -1 days
   1: out of range integral type conversion attempted
