tests/integration/snapshots/integration__schedule_tests__schedule_error_zero_cycle.snap
---
source: tests/integration/schedule_tests.rs
expression: output.stderr
---
Error: --cycle must be a positive duration, got 'P0D'
